--- a/automations.yaml
+++ b/automations.yaml
@@ -791,31 +791,31 @@
       264fe312-b244-4631-8cc0-21e03a34c84c:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FZTe10kJMfXgNaiSCsStC%2Frecordings%2FKksLQS6LUXWLrBbtDusZ%2Frecordings%2Faudio.mp3?alt=media&token=46232d75-e430-4b11-a532-4185a96a34dd
         media_content_type: music
-        title: 'What the Ladybird Heard'
+        title: What the Ladybird Heard
       ce39e080-b2a6-41df-8118-bb13852196c3:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2F0CSxJ7wAn8p7s6adeqAx%2Frecordings%2F82kgp14YF6iJtU77IaSd%2Frecordings%2Faudio.mp3?alt=media&token=68bdd707-2f64-47a6-9887-8b86dd6b73d4
         media_content_type: music
-        title: 'Tiddler'
+        title: Tiddler
       a121ba28-4832-49c9-a1ad-7306fae8c27c:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FvGG2EXQ9sp2HOS9f74UB%2Frecordings%2FfKgkUvjMMQZYIM5XT2Wd%2Frecordings%2Faudio.mp3?alt=media&token=096ef499-c35d-44fa-a9eb-2c9ca5cb9ec0
         media_content_type: music
-        title: 'Lady of Shallot'
+        title: Lady of Shallot
       ef01de9a-495d-4c06-b0df-884b58f1da27:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FEfVUE7f9cD3ggPOJG3WG%2Frecordings%2F5YLWhtixOsEX4ju064js%2Frecordings%2Faudio.mp3?alt=media&token=60cd78ce-af61-4982-86b7-604a6ddf7985
         media_content_type: music
-        title: 'Zog and the Flying Doctors'
+        title: Zog and the Flying Doctors
       0f879ebc-f9be-48b9-baf3-2f9511f0b6c3:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FQkcZLdHAK2DgO8L8FDgG%2Frecordings%2FDGc9pUmUPbzHwhAvImCc%2Frecordings%2Faudio.mp3?alt=media&token=2e7a5558-c610-44d8-b03f-534e0b1f2a24
         media_content_type: music
-        title: 'Monkey Puzzle'
+        title: Monkey Puzzle
       7a45dacb-6a7b-450d-a445-1bc180e3b7d2:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2F6aOQWFLcP8N40QSpBiVL%2Frecordings%2Frxu1QkpPKd9wYwX2094m%2Frecordings%2Faudio.mp3?alt=media&token=964f2092-cd0d-4f29-a0f9-cbd1cc3670a3
         media_content_type: music
-        title: 'The Snail and the Whale'
+        title: The Snail and the Whale
       937e676e-9590-4ae2-87ed-e484525deffa:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FWAmgOrvRTRaoApufBwFJ%2Frecordings%2F8OwDv4WuCySO2j6tBAkd%2Frecordings%2Faudio.mp3?alt=media&token=b34ac6ea-9052-4a30-9f86-788f7a39e438
         media_content_type: music
-        title: 'Peace at last'
+        title: Peace at last
       04-68-7F-62-EC-6B-81:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FtfRd0ncTBChvgHQM0jjk%2Frecordings%2Fa7VgLNATEVtB6P3avoE3%2Frecordings%2Faudio.mp3?alt=media&token=5cdd84c4-2930-4bec-bfd2-e48cc8d579a6
         media_content_type: music
@@ -972,4 +972,63 @@
       media_content_id: https://www.dropbox.com/s/wlhcirxknyrqvp5/Close.wav?dl=1
       media_content_type: music
     entity_id: media_player.living_room_display
+  mode: single
+- id: '1604341003387'
+  alias: Podcast test
+  description: ''
+  trigger:
+  - platform: tag
+    tag_id: d9354ba8-ca01-4715-9654-c80546db17a8
+  condition: []
+  action:
+  - choose:
+    - conditions:
+      - condition: template
+        value_template: '{{ states.counter.marvellous_musical.state | int >= states.sensor.podcast_marvellous_musical.attributes.entries
+          | length | int }} '
+      sequence:
+      - service: counter.configure
+        data:
+          value: '{{ states.sensor.podcast_marvellous_musical.attributes.entries |
+            length - 1| int }}'
+        entity_id: counter.marvellous_musical
+    default: []
+  - service: tts.google_translate_say
+    data:
+      entity_id: media_player.seb_s_home
+      message: '{{ states.sensor.podcast_marvellous_musical.attributes.entries[states.counter.marvellous_musical.state
+        | int].title }}'
+  - delay: 00:00:02
+  - wait_template: '{{ states.media_player.seb_s_home.state==''idle'' }}'
+    continue_on_timeout: true
+    timeout: '10'
+  - service: media_player.play_media
+    data:
+      media_content_id: '{{ (state_attr(''sensor.podcast_marvellous_musical'',''entries'')[states.counter.marvellous_musical.state
+        | int].links | selectattr(''rel'',''eq'',''enclosure'') | list)[0].href }}'
+      media_content_type: music
+    entity_id: media_player.seb_s_home
+  - service: counter.decrement
+    entity_id: counter.marvellous_musical
+  mode: restart
+- id: '1604414221372'
+  alias: test
+  description: ''
+  trigger:
+  - platform: state
+    entity_id: counter.marvellous_musical
+  condition: []
+  action:
+  - choose:
+    - conditions:
+      - condition: state
+        entity_id: counter.marvellous_musical
+        state: '-1'
+      sequence:
+      - service: counter.configure
+        data:
+          value: '{{ states.sensor.podcast_marvellous_musical.attributes.entries |
+            length | int }}'
+        entity_id: counter.marvellous_musical
+    default: []
   mode: single
