--- a/includes/sensors.yaml
+++ b/includes/sensors.yaml
@@ -62,6 +62,14 @@
       value_template: '{{states.sensor.ensuite_temperature.state |round(0)}}'
 - platform: feedparser
   scan_interval: 43200
+  name: podcast_sound_explorers
+  feed_url: https://feeds.megaphone.fm/soundexplorers
+- platform: feedparser
+  scan_interval: 43200
+  name: podcast_marvellous_musical
+  feed_url: https://rss.hosting.thisisdax.com/99ebc61a-7b26-4f76-b595-9e2020ad84ac
+- platform: feedparser
+  scan_interval: 43200
   name: QOTD
   feed_url: http://feeds.feedburner.com/theysaidso/qod/inspire
 - platform: feedparser
