--- a/esphome/light_d1mini_star.yaml
+++ b/esphome/light_d1mini_star.yaml
@@ -6,7 +6,7 @@ esphome:
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
-  domain: ".home"
+  domain: ".lan"
 
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
@@ -23,10 +23,36 @@ api:
 
 ota:
 
-switch:
-  - platform: gpio
-    pin: 
-      number: D8
-      inverted: yes
-    restore_mode: RESTORE_DEFAULT_OFF
+    
+light:
+  - platform: monochromatic
     name: "Christmas Star"
+    id: star
+    output: output_component1
+    restore_mode: RESTORE_DEFAULT_OFF
+    effects:
+      - strobe:
+          name: Blink
+      - flicker:
+          intensity: 15%
+      - lambda:
+          name: Breathe
+          update_interval: 3s
+          lambda: |-
+            static bool state = false;
+            auto call = id(star).turn_on();
+            if (state) {
+              call.set_brightness(0.5);
+            } else {
+              call.set_brightness(1.0);
+            }
+            call.set_transition_length(2500);
+            call.perform();
+
+            state = !state;
+# Example output entry
+output:
+  - platform: esp8266_pwm
+    id: output_component1
+    pin: D8 
+    inverted: yes
