--- a/automations.yaml
+++ b/automations.yaml
@@ -788,31 +788,31 @@
       04-0F-81-FA-90-49-81:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FGH4ZnxM7M8oxbVZEmV4T%2Frecordings%2FOZljR1hXy7orkCBrha9f%2Frecordings%2Faudio.mp3?alt=media&token=9d6f367f-4521-4e0b-9b7d-66500f2ef836
         media_content_type: music
-      264fe312-b244-4631-8cc0-21e03a34c84c:
+      04-1B-81-FA-90-49-81:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FZTe10kJMfXgNaiSCsStC%2Frecordings%2FKksLQS6LUXWLrBbtDusZ%2Frecordings%2Faudio.mp3?alt=media&token=46232d75-e430-4b11-a532-4185a96a34dd
         media_content_type: music
         title: What the Ladybird Heard
-      ce39e080-b2a6-41df-8118-bb13852196c3:
+      04-27-81-FA-90-49-81:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2F0CSxJ7wAn8p7s6adeqAx%2Frecordings%2F82kgp14YF6iJtU77IaSd%2Frecordings%2Faudio.mp3?alt=media&token=68bdd707-2f64-47a6-9887-8b86dd6b73d4
         media_content_type: music
         title: Tiddler
-      a121ba28-4832-49c9-a1ad-7306fae8c27c:
+      04-21-81-FA-90-49-81:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FvGG2EXQ9sp2HOS9f74UB%2Frecordings%2FfKgkUvjMMQZYIM5XT2Wd%2Frecordings%2Faudio.mp3?alt=media&token=096ef499-c35d-44fa-a9eb-2c9ca5cb9ec0
         media_content_type: music
         title: Lady of Shallot
-      ef01de9a-495d-4c06-b0df-884b58f1da27:
+      04-7E-6E-62-90-6B-80:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FEfVUE7f9cD3ggPOJG3WG%2Frecordings%2F5YLWhtixOsEX4ju064js%2Frecordings%2Faudio.mp3?alt=media&token=60cd78ce-af61-4982-86b7-604a6ddf7985
         media_content_type: music
         title: Zog and the Flying Doctors
-      0f879ebc-f9be-48b9-baf3-2f9511f0b6c3:
+      04-15-81-FA-90-49-81:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FQkcZLdHAK2DgO8L8FDgG%2Frecordings%2FDGc9pUmUPbzHwhAvImCc%2Frecordings%2Faudio.mp3?alt=media&token=2e7a5558-c610-44d8-b03f-534e0b1f2a24
         media_content_type: music
         title: Monkey Puzzle
-      7a45dacb-6a7b-450d-a445-1bc180e3b7d2:
+      04-82-6E-62-90-6B-80:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2F6aOQWFLcP8N40QSpBiVL%2Frecordings%2Frxu1QkpPKd9wYwX2094m%2Frecordings%2Faudio.mp3?alt=media&token=964f2092-cd0d-4f29-a0f9-cbd1cc3670a3
         media_content_type: music
         title: The Snail and the Whale
-      937e676e-9590-4ae2-87ed-e484525deffa:
+      04-64-7F-62-EC-6B-81:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FWAmgOrvRTRaoApufBwFJ%2Frecordings%2F8OwDv4WuCySO2j6tBAkd%2Frecordings%2Faudio.mp3?alt=media&token=b34ac6ea-9052-4a30-9f86-788f7a39e438
         media_content_type: music
         title: Peace at last
@@ -822,6 +822,30 @@
       04-7A-6E-62-90-6B-80:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2F6WD7fy4W11bVKV2Gd8o9%2Frecordings%2FCToJUbTb6lN9gitTkCNd%2Frecordings%2Faudio.mp3?alt=media&token=065cf49f-b8bc-4ba3-9cb4-304d2ebd64ff
         media_content_type: music
+      04-76-6E-62-90-6B-80:
+        media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2Fo2FeQfUcl5rRgzEkitho%2Frecordings%2F6OgP7oT0UzA6O0OGZUYB%2Frecordings%2Faudio.mp3?alt=media&token=98a53f04-c488-408f-bf77-49c20fea70c8
+        media_content_type: music
+        title: Aussie Hokey Pokey
+      04-11-6F-AA-ED-6C-80:
+        media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2Fr6uZZnI0groNWT5WZ7Q6%2Frecordings%2FtbH0tAPWPRNQwqERZPDV%2Frecordings%2Faudio.mp3?alt=media&token=59870357-8fa9-42ec-b3f2-427bd507aa59
+        media_content_type: music
+        title: The Very Hungry Bear
+      04-21-6F-AA-ED-6C-80:
+        media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FxYIn8pzCyYeS10gdtQu2%2Frecordings%2FxcvKHkKYr9CAE4x92SNO%2Frecordings%2Faudio.mp3?alt=media&token=f76abe00-e319-442f-9005-a369c8beb3e1
+        media_content_type: music
+        title: Sugarlump & The Unicorn
+      04-15-6F-AA-ED-6C-80:
+        media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FxSY7s30WsI7vekKXEKDb%2Frecordings%2FfdxzoTGrxO4ZkgCiMiVy%2Frecordings%2Faudio.mp3?alt=media&token=8d1fe17f-d124-4ab8-a553-5e5941b754ec
+        media_content_type: music
+        title: The Cave
+      04-19-6F-AA-ED-6C-80:
+        media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FtVyUc0pXJ2pyGYt9HXor%2Frecordings%2FDa0xO76KGBbbtC4TsrUG%2Frecordings%2Faudio.mp3?alt=media&token=ff9cc69d-ef39-4530-a29f-c681144f2c77
+        media_content_type: music
+        title: The Paper Dolls
+      04-1D-6F-AA-ED-6C-80:
+        media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FiZ9ToRDmRaD9LjLDXNPf%2Frecordings%2F2CjY7QGcCibMzgbcSJP3%2Frecordings%2Faudio.mp3?alt=media&token=73b881c5-6ca7-4881-82f5-eec3169e2f3a
+        media_content_type: music
+        title: Snow Bears
   trigger:
     platform: event
     event_type: tag_scanned
