--- a/esphome/tagreader.yaml
+++ b/esphome/tagreader.yaml
@@ -1,8 +1,11 @@
 # Insert your SSID and Your PWD after inital setup
 wifi:
   networks:
-#    - ssid: !secret wifi_ssid          # Uncomment this line (remove # at beginning of line) and enter your details in secrets.yaml file!
-#      password: !secret wifi_password  # Uncomment this line (remove # at beginning of line) and enter your details in secrets.yaml file!
+    - ssid: !secret wifi_iot_ssid
+      password: !secret wifi_password
+    - ssid: !secret wifi_ssid
+      password: !secret wifi_password
+
   ap:
     ssid: ${devicename}
 
@@ -17,12 +20,7 @@ esphome:
   name: $devicename
   platform: ESP8266
   board: d1_mini
-  includes:
-  - ndef.h
-  libraries:
-  - https://github.com/jesserockz/NDEF.git#25402f12
-  - https://github.com/jesserockz/PN532.git#b2201f93
-
+ 
 # If buzzer is enabled, notify on api connection success
   on_boot:
     priority: -10
@@ -31,7 +29,18 @@ esphome:
         api.connected:
     - logger.log: API is connected!
     - rtttl.play: "success:d=24,o=5,b=100:c,g,b"
-
+    - light.turn_on:
+        id: activity_led
+        brightness: 100%
+        red: 0%
+        green: 0%
+        blue: 100%
+        flash_length: 500ms
+    - switch.turn_on:
+        id: buzzer_enabled
+    - switch.turn_on:
+        id: led_enabled
+        
 # Define switches to control LED and buzzer from HA
 switch:
 - platform: template
@@ -70,13 +79,41 @@ ota:
 
 # Enable I2C interface
 i2c:
+  scan: False
+  frequency: 400kHz
 
+pn532_i2c:
+  id: pn532_board
+  on_tag:
+    then:
+    - homeassistant.tag_scanned: !lambda 'return x;'
+    - if:
+        condition:
+          switch.is_on: buzzer_enabled
+        then:
+        - rtttl.play: "success:d=24,o=5,b=100:c,g,b"
+    - if:
+        condition:
+          switch.is_on: led_enabled
+        then:
+        - light.turn_on:
+            id: activity_led
+            brightness: 100%
+            red: 0%
+            green: 100%
+            blue: 0%
+            flash_length: 500ms
+            
 # Define the buzzer output
 output:
 - platform: esp8266_pwm
   pin: D7
   id: buzzer
 
+binary_sensor:
+  - platform: status
+    name: "${friendly_name} Status"
+    
 # Define buzzer as output for RTTTL
 rtttl:
   output: buzzer
@@ -92,36 +129,3 @@ light:
   id: activity_led
   name: "${friendly_name} LED"
   restore_mode: ALWAYS_OFF
-
-text_sensor:
-- platform: custom
-  lambda: |-
-    auto ndef_tag_reader = new NDEFTagReader();
-    App.register_component(ndef_tag_reader);
-    return {ndef_tag_reader};
-  text_sensors:
-    name: "${friendly_name} Tag"
-    id: scanned_tag
-    on_value:
-      then:
-      - if:
-          condition:
-            lambda: return x != "";
-          then:
-          - homeassistant.tag_scanned: !lambda 'return x;'
-          - if:
-              condition:
-                switch.is_on: buzzer_enabled
-              then:
-              - rtttl.play: "success:d=24,o=5,b=100:c,g,b"
-          - if:
-              condition:
-                switch.is_on: led_enabled
-              then:
-              - light.turn_on:
-                  id: activity_led
-                  brightness: 100%
-                  red: 0%
-                  green: 100%
-                  blue: 0%
-                  flash_length: 500ms
