--- a/esphome/d1mini_motion_reuben.yaml
+++ b/esphome/d1mini_motion_reuben.yaml
@@ -1,5 +1,5 @@
 esphome:
-  name: d1mini_motion_reuben
+  name: "${device_name}"
   platform: ESP8266
   board: d1_mini
 
@@ -14,6 +14,10 @@ wifi:
     ssid: "D1Mini Motion Pir Hotspot"
     password: !secret wifi_password
 
+substitutions:
+  device_name: "d1mini_motion_reuben"
+  friendly_name: "Reu D1"
+  
 captive_portal:
 
 # Enable logging
@@ -31,11 +35,12 @@ dallas:
 sensor:
   - platform: dallas
     address: 0x9401187D0BC7FF28
-    name: "Reu D1 Temperature"
-
+    name: "${friendly_name} Temperature"
 
 binary_sensor:
   - platform: gpio
     pin: D1
-    name: "Reu D1 Motion"
+    name: "${friendly_name} Motion"
     device_class: motion
+  - platform: status
+    name: "${friendly_name} Status"
