--- a/esphome/sensor_d1mini_dht22_bed1.yaml
+++ b/esphome/sensor_d1mini_dht22_bed1.yaml
@@ -1,5 +1,5 @@
 esphome:
-  name: sensor_d1mini_dht22_bed1
+  name: "${device_name}"
   platform: ESP8266
   board: d1_mini
 
@@ -7,6 +7,12 @@ wifi:
   ssid: !secret wifi_iot_ssid
   password: !secret wifi_password
   domain: ".lan"
+  ap: 
+    ssid: "${device_name}"
+    
+substitutions:
+  device_name: "sensor_d1mini_dht22_bed1"
+  friendly_name: "Bed1"
 
 # Enable logging
 logger:
@@ -22,10 +28,14 @@ sensor:
     model: DHT22
     update_interval: 300s
     temperature:
-      name: "Bed1 Temperature"
+      name: "${friendly_name} Temperature"
     humidity:
-      name: "Bed1 Humidity"
+      name: "${friendly_name} Humidity"
   - platform: adc
     pin: VCC
     name: "Bed1 Voltage"
     update_interval: 600s
+    
+binary_sensor:
+  - platform: status
+    name: "${friendly_name} Status"
