--- a/esphome/sensor_d1mini_dht22_green.yaml
+++ b/esphome/sensor_d1mini_dht22_green.yaml
@@ -1,5 +1,5 @@
 esphome:
-  name: sensor_d1mini_dht22_green
+  name: "${device_name}"
   platform: ESP8266
   board: d1_mini
 
@@ -7,7 +7,9 @@ wifi:
   ssid: !secret wifi_iot_ssid
   password: !secret wifi_password
   domain: ".lan"
-
+  ap:
+    ssid: "${device_name}"
+    
 # Enable logging
 logger:
 
@@ -16,16 +18,23 @@ api:
 
 ota:
 
+substitutions:
+  device_name: "sensor_d1mini_dht22_green"
+  friendly_name: "Living Room"
 sensor:
   - platform: dht
     pin: D1
     model: DHT22
     update_interval: 300s
     temperature:
-      name: "Living Room Temp"
+      name: "${friendly_name} Temp"
     humidity:
-      name: "Living Room Humidity"
+      name: "${friendly_name} Humidity"
   - platform: adc
     pin: VCC
     name: "Living Room Voltage"
     update_interval: 600s
+
+binary_sensor:
+  - platform: status
+    name: "${friendly_name} Status"
