Added: Condition to only turn off a light after motion timeout _if_ the light is on (to prevent notifications when light was manually turned off before the timeout)

--- a/automations.yaml
+++ b/automations.yaml
@@ -690,6 +690,7 @@
   - after: 07:30
     condition: time
     before: '19:30'
+  - '{{ states(light_map[trigger.entity_id]) | string == ''on''}}'
   action:
   - service: light.turn_off
     data:
