--- a/esphome/d1mini_motion_reuben.yaml
+++ b/esphome/d1mini_motion_reuben.yaml
@@ -36,7 +36,17 @@ sensor:
   - platform: dallas
     address: 0x9401187D0BC7FF28
     name: "${friendly_name} Temperature"
-
+    filters:
+      - calibrate_linear:
+          # Map 0.0 (from sensor) to 0.0 (true value)
+          - 23.0 -> 17.8
+          - 23.2 -> 17.9
+          - 23.6 -> 18.5
+          - 24.0 -> 18.6
+          - 24.1 -> 18.9
+          - 24.2 -> 19.1
+          - 24.8 -> 19.4
+          
 binary_sensor:
   - platform: gpio
     pin: D1
