--- a/esphome/light_d1mini_star.yaml
+++ b/esphome/light_d1mini_star.yaml
@@ -4,7 +4,7 @@ esphome:
   board: d1_mini
   
 wifi:
-  ssid: !secret wifi_ssid
+  ssid: !secret wifi_iot_ssid
   password: !secret wifi_password
   domain: ".lan"
 
