--- a/esphome/esp32_epaper.yaml
+++ b/esphome/esp32_epaper.yaml
@@ -65,9 +65,6 @@ font:
   - file: 'fonts/consola.ttf'
     id: consola_s
     size: 18
-  - file: 'fonts/consola.ttf'
-    id: consola_m
-    size: 20
   - file: 'fonts/Roboto-Regular.ttf'
     id: roboto_s
     size: 18
@@ -110,12 +107,16 @@ sensor:
     entity_id: sensor.bed1_temperature
     internal: true    
   - platform: homeassistant
+    id: bed2_temp
+    entity_id: sensor.bed2_temperature
+    internal: true    
+  - platform: homeassistant
     id: reu_temp
-    entity_id: sensor.reu_temperature
+    entity_id: sensor.reu_d1_temperature
     internal: true
   - platform: homeassistant
     id: seb_temp
-    entity_id: sensor.seb_temperature
+    entity_id: sensor.seb_d1_temperature
     internal: true
   - platform: homeassistant
     id: bath_temp
@@ -134,8 +135,8 @@ sensor:
     entity_id: sensor.bed1_humidity
     internal: true
   - platform: homeassistant
-    id: reu_humidity
-    entity_id: sensor.reu_humidity
+    id: bed2_humidity
+    entity_id: sensor.bed2_humidity
     internal: true
   - platform: homeassistant
     id: seb_humidity
@@ -240,37 +241,36 @@ display:
           it.strftime(250, 125, id(roboto_bold_xs), COLOR_OFF, TextAlign::BOTTOM_RIGHT , "Updated: %H:%M", id(esptime).now());
       - id: page_temps
         lambda: |-
-          it.printf(0, 0, id(roboto_m), TextAlign::TOP_LEFT, "Bed1:");
-          it.printf(115, 0, id(roboto_m), TextAlign::TOP_RIGHT, "%.1f°", (id(bed1_temp).has_state()?id(bed1_temp).state:0.0));
-          it.printf(125, 0, id(consola_m), TextAlign::TOP_LEFT, "Ensuite:");
-          it.printf(249, 0, id(consola_m), TextAlign::TOP_RIGHT, "%.1f°", id(ensuite_temp).has_state()?id(ensuite_temp).state:0.0);
-          it.printf(0, 25, id(roboto_m), TextAlign::TOP_LEFT, "Bed3:");
-          it.printf(115, 25, id(roboto_m), TextAlign::TOP_RIGHT, "%.1f°", id(seb_temp).has_state()?id(seb_temp).state:0.0);
-          it.printf(125, 25, id(consola_m), TextAlign::TOP_LEFT, "Bed4:");
-          it.printf(249, 25, id(consola_m), TextAlign::TOP_RIGHT, "%.1f°", id(reu_temp).has_state()?id(reu_temp).state:0.0);
-          it.printf(0, 50, id(roboto_m), TextAlign::TOP_LEFT, "Bath:");
-          it.printf(115, 50, id(roboto_m), TextAlign::TOP_RIGHT, "%.1f°", id(bath_temp).has_state()?id(bath_temp).state:0.0);
-          it.printf(125, 50, id(consola_m), TextAlign::TOP_LEFT, "Lounge:");
-          it.printf(249, 50, id(consola_m), TextAlign::TOP_RIGHT, "%.1f°", id(lounge_temp).has_state()?id(lounge_temp).state:0.0);
-          it.printf(0, 75, id(roboto_m), TextAlign::TOP_LEFT, "Garage: %s", id(garage_door).state?"Open":"Closed");
+          it.printf(0, 0, id(roboto_m), TextAlign::TOP_LEFT, "Bath:");
+          it.printf(115, 0, id(roboto_m), TextAlign::TOP_RIGHT, "%.1f°", (id(bath_temp).has_state()?id(bath_temp).state:0.0));
+          it.printf(125, 0, id(roboto_m), TextAlign::TOP_LEFT, "Ensuite:");
+          it.printf(249, 0, id(roboto_m), TextAlign::TOP_RIGHT, "%.1f°", id(ensuite_temp).has_state()?id(ensuite_temp).state:0.0);
+          it.printf(0, 25, id(roboto_m), TextAlign::TOP_LEFT, "Bed1:");
+          it.printf(115, 25, id(roboto_m), TextAlign::TOP_RIGHT, "%.1f°", id(bed1_temp).has_state()?id(bed1_temp).state:0.0);
+          it.printf(125, 25, id(roboto_m), TextAlign::TOP_LEFT, "Office:");
+          it.printf(249, 25, id(roboto_m), TextAlign::TOP_RIGHT, "%.1f°", id(bed2_temp).has_state()?id(bed2_temp).state:0.0);
+          it.printf(0, 50, id(roboto_m), TextAlign::TOP_LEFT, "Bed3:");
+          it.printf(115, 50, id(roboto_m), TextAlign::TOP_RIGHT, "%.1f°", id(seb_temp).has_state()?id(seb_temp).state:0.0);
+          it.printf(125, 50, id(roboto_m), TextAlign::TOP_LEFT, "Bed4:");
+          it.printf(249, 50, id(roboto_m), TextAlign::TOP_RIGHT, "%.1f°", id(reu_temp).has_state()?id(reu_temp).state:0.0);
+          it.printf(0, 75, id(roboto_m), TextAlign::TOP_LEFT, "Lounge:");
+          it.printf(125, 75, id(roboto_m), TextAlign::TOP_RIGHT, "%.1f°", id(lounge_temp).has_state()?id(lounge_temp).state:0.0);
           it.image(220, 75, id(thermometer));
           
           it.filled_rectangle(0, 105, 250, 122);
           it.strftime(250, 125, id(roboto_bold_xs), COLOR_OFF, TextAlign::BOTTOM_RIGHT , "Updated: %H:%M", id(esptime).now());
       - id: page_humidity
         lambda: |-
-          it.printf(0, 0, id(roboto_m), TextAlign::TOP_LEFT , "Bed1:");
-          it.printf(115, 0, id(roboto_m), TextAlign::TOP_RIGHT, "%.1f%%", (id(bed1_humidity).has_state()?id(bed1_humidity).state:0.0));
+          it.printf(0, 0, id(roboto_m), TextAlign::TOP_LEFT , "Bath:");
+          it.printf(115, 0, id(roboto_m), TextAlign::TOP_RIGHT, "%.1f%%", (id(bath_humidity).has_state()?id(bath_humidity).state:0.0));
           it.printf(125, 0, id(roboto_m), TextAlign::TOP_LEFT, "Ensuite:");
           it.printf(249, 0, id(roboto_m), TextAlign::TOP_RIGHT, "%.1f%%", id(ensuite_humidity).has_state()?id(ensuite_humidity).state:0.0);
-          it.printf(0, 25, id(roboto_m), TextAlign::TOP_LEFT, "Bed3:");
-          it.printf(115, 25, id(roboto_m), TextAlign::TOP_RIGHT, "%.1f%%", id(seb_humidity).has_state()?id(seb_humidity).state:0.0);
-          it.printf(125, 25, id(roboto_m), TextAlign::TOP_LEFT, "Bed4:");
-          it.printf(249, 25, id(roboto_m), TextAlign::TOP_RIGHT, "%.1f%%", id(reu_humidity).has_state()?id(reu_humidity).state:0.0);
-          it.printf(0, 50, id(roboto_m), TextAlign::TOP_LEFT, "Bath:");
-          it.printf(115, 50, id(roboto_m), TextAlign::TOP_RIGHT, "%.1f%%", id(bath_humidity).has_state()?id(bath_humidity).state:0.0);
-          it.printf(125, 50, id(roboto_m), TextAlign::TOP_LEFT, "Lounge:");
-          it.printf(249, 50, id(roboto_m), TextAlign::TOP_RIGHT, "%.1f%%", id(lounge_humidity).has_state()?id(lounge_humidity).state:0.0);
+          it.printf(0, 25, id(roboto_m), TextAlign::TOP_LEFT, "Bed1:");
+          it.printf(115, 25, id(roboto_m), TextAlign::TOP_RIGHT, "%.1f%%", id(bed1_humidity).has_state()?id(bed1_humidity).state:0.0);
+          it.printf(125, 25, id(roboto_m), TextAlign::TOP_LEFT, "Office:");
+          it.printf(249, 25, id(roboto_m), TextAlign::TOP_RIGHT, "%.1f%%", id(bed2_humidity).has_state()?id(bed2_humidity).state:0.0);
+          it.printf(0, 50, id(roboto_m), TextAlign::TOP_LEFT, "Lounge:");
+          it.printf(115, 50, id(roboto_m), TextAlign::TOP_RIGHT, "%.1f%%", id(lounge_humidity).has_state()?id(lounge_humidity).state:0.0);
           it.printf(0, 75, id(roboto_m), TextAlign::TOP_LEFT, "Garage: %s", id(garage_door).state?"Open":"Closed");
           it.image(220, 75, id(humidity));
           
