Added: device_class=door to binary sensors (to set correct icon) Added: Living room door status to living room panel on overview tab

--- a/customize.yaml
+++ b/customize.yaml
@@ -123,3 +123,9 @@ binary_sensor.washer:
   device_class: plug
 binary_sensor.garage_door:
   device_class: garage_door
+binary_sensor.living_room_door:
+  device_class: door
+binary_sensor.bed1_status:
+  device_class: connectivity
+binary_sensor.bed1_door:
+  device_class: door
