--- a/configuration.yaml
+++ b/configuration.yaml
@@ -24,6 +24,7 @@ script: !include scripts.yaml
 sensor: !include includes/sensors.yaml
 zone: !include zones.yaml
 downloader: !include includes/downloader.yaml
+neato: !include includes/neato.yaml
 
 pi_hole:
   - host: 192.168.1.215
