Added: Only send repeat notification of washer finished if >10 mins since the initial notification was sent Added: Increased delay to 90seconds before detecting that washing has finished

--- a/automations.yaml
+++ b/automations.yaml
@@ -382,6 +382,9 @@
   - minutes: /15
     platform: time_pattern
   condition:
+  - condition: template
+    value_template: '{{ as_timestamp(now()) - as_timestamp(states.binary_sensor.washer.last_changed)
+      > 10*60 }}'
   - condition: state
     entity_id: input_boolean.do_not_disturb
     state: 'off'
